--- a/huh/index.html
+++ b/huh/index.html
@@ -272,5 +272,6 @@
 </style>
 
 <script>
+    window.onload = setTheme({r:142,g:142,b:142,a:255}, {r:0,g:0,b:255,a:0.1});
     setTheme({r:142,g:142,b:142,a:255}, {r:0,g:0,b:255,a:0.1});
 </script>
