--- a/fav-music/index.html
+++ b/fav-music/index.html
@@ -123,5 +123,6 @@
 </html>
 
 <script>
-    setTheme({r:142,g:142,b:142,a:255}, {r:50,g:100,b:255,a:0.4});
+    let str_stored_theme_key = sessionStorage.getItem("selected_theme_key");
+    setTheme(str_stored_theme_key, {r:142,g:142,b:142,a:255}, {r:50,g:100,b:255,a:0.4});
 </script>
