--- a/huh/index.html
+++ b/huh/index.html
@@ -272,6 +272,6 @@
 </style>
 
 <script>
-    window.onload = setTheme({r:142,g:142,b:142,a:255}, {r:0,g:0,b:255,a:0.1});
-    setTheme({r:142,g:142,b:142,a:255}, {r:0,g:0,b:255,a:0.1});
+    let str_stored_theme_key = sessionStorage.getItem("selected_theme_key");
+    setTheme(str_stored_theme_key, {r:142,g:142,b:142,a:255}, {r:0,g:0,b:255,a:0.1});
 </script>
