--- a/huh/somewhereelse.html
+++ b/huh/somewhereelse.html
@@ -168,5 +168,6 @@
 </style>
 
 <script>
-    setTheme({r:142,g:142,b:142,a:255}, {r:200,g:0,b:120,a:0.2});
+    let str_stored_theme_key = sessionStorage.getItem("selected_theme_key");
+    setTheme(str_stored_theme_key, {r:142,g:142,b:142,a:255}, {r:200,g:0,b:120,a:0.2});
 </script>
