--- a/projects/aoifernet.html
+++ b/projects/aoifernet.html
@@ -154,6 +154,7 @@
         }
         ditherButton.onclick = backToOriginal;
     }
-    
-    setTheme({r:142,g:142,b:142,a:255}, {r:255,g:0,b:255,a:0.2});
+
+    let str_stored_theme_key = sessionStorage.getItem("selected_theme_key");
+    setTheme(str_stored_theme_key, {r:142,g:142,b:142,a:255}, {r:255,g:0,b:255,a:0.2});
 </script>
