--- a/me.html
+++ b/me.html
@@ -116,12 +116,14 @@
     }
     @media only screen and (max-width: 800px){
         #meQuestions {
-		text-align: center !important;
-		margin-left: 0vh !important;
+            text-align: center !important;
+            margin-left: 0vh !important;
+            font-size: 175% !important;
         }
         #meAnswers {
             text-align: center !important;
             margin-right: 0vh !important;
+            font-size: 175% !important;
         }
     }
 </style>
