Background scroll fix

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 	const light_theme = [
         ['body:before', ['background', 'url("https://hytheaway.github.io/assets/bg-test-purple4-dither.png") no-repeat center center fixed;']],
         ['body:before', ['background-size', 'cover']],
+		['@media only screen and (max-width: 800px)', ['body:before', ['background-attachment', 'scroll', true]]],
         ['body:before', ['background-attachment', 'fixed']]
     ];
 	const images = ["assets/me400-1.jpg", "assets/me400-2.jpg", "assets/me400-3.jpg", "assets/me400-4.jpg", "assets/me400-5.jpg", "assets/me400-6.jpg"];
@@ -114,7 +115,7 @@
 		}
 		try {
 			let str_stored_theme_key = sessionStorage.getItem("selected_theme_key");
-			if (str_stored_theme_key.length < 250){
+			if (str_stored_theme_key.length < 500){
 				str_stored_theme_key = customizeBackgroundColor(bg, fg, str_stored_theme_key);
 			}
 			const arr_stored_theme_key = JSON.parse(str_stored_theme_key);
