--- a/options.html
+++ b/options.html
@@ -129,7 +129,7 @@
     const light_theme = [
         ['body:before', ['background', 'url("https://hytheaway.github.io/assets/bg-test-purple4-dither.png") no-repeat center center fixed']],
         ['body:before', ['background-size', 'cover']],
-        ['@media only screen and (max-width: 800px)', ['body:before', ['background-attachment', 'scroll', true]]],
+        // ['@media only screen and (max-width: 800px)', ['body::before', ['background-attachment', 'scroll', true]]],
         ['body:before', ['background-attachment', 'fixed']]
     ];
     const dark_theme = [
