Update background scroll 2

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	const light_theme = [
         ['body:before', ['background', 'url("https://hytheaway.github.io/assets/bg-test-purple4-dither.png") no-repeat center center fixed;']],
         ['body:before', ['background-size', 'cover']],
-		['@media only screen and (max-width: 800px)', ['body:before', ['background-attachment', 'scroll', true]]],
+		// ['@media only screen and (max-width: 800px)', ['body:before', ['background-attachment', 'scroll', true]]],
         ['body:before', ['background-attachment', 'fixed']]
     ];
 	const images = ["assets/me400-1.jpg", "assets/me400-2.jpg", "assets/me400-3.jpg", "assets/me400-4.jpg", "assets/me400-5.jpg", "assets/me400-6.jpg"];
