--- a/options.html
+++ b/options.html
@@ -165,6 +165,7 @@
             if (themeIndex == 1) {
                 addStyleSheetRules(light_theme);
                 sessionStorage.setItem("selected_theme_key", JSON.stringify(light_theme));
+                setTheme(str_stored_theme_key, {r:142,g:142,b:142,a:255}, {r:255,g:0,b:110,a:0.35});
             }
             if (themeIndex == 2) {
                 addStyleSheetRules(dark_theme);
